[gd_scene load_steps=8 format=3 uid="uid://cc7vstslog23o"]

[ext_resource type="Script" uid="uid://b3bwwb3yp2s6r" path="res://UI Scenes/player_ui.gd" id="1_8wq4l"]
[ext_resource type="Texture2D" uid="uid://c4m82to15c03o" path="res://Assets/UI Sprites/Icon_Border.png" id="1_k4ew6"]
[ext_resource type="Texture2D" uid="uid://bkmcx2w6oyhds" path="res://Assets/UI Sprites/Icon_Single_Circ.png" id="3_nul7f"]
[ext_resource type="Texture2D" uid="uid://qjp3e0fpnfgi" path="res://Assets/UI Sprites/Icon_3Shot_Circ.png" id="4_2cns7"]
[ext_resource type="Texture2D" uid="uid://c3mcklesdfoax" path="res://Assets/UI Sprites/Icon_8Shot_Circ.png" id="5_0ct5d"]
[ext_resource type="Texture2D" uid="uid://cf12ploul43cq" path="res://Assets/UI Sprites/Icon_SpeedUp_Circ.png" id="6_57t0v"]
[ext_resource type="Texture2D" uid="uid://b4mxva3chakxb" path="res://Assets/UI Sprites/Icon_Turret_Circ.png" id="7_07fkh"]

[node name="PlayerUI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = -2880.0
offset_top = -1620.0
offset_right = 2880.0
offset_bottom = 1620.0
script = ExtResource("1_8wq4l")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 3243.0
offset_top = 2150.0
offset_right = 3667.0
offset_bottom = 2170.0
alignment = 2

[node name="EnergyBar" type="TextureProgressBar" parent="HBoxContainer"]
layout_mode = 2

[node name="EnergyLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Energy: 0/500"

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 3243.0
offset_top = 2115.0
offset_right = 3667.0
offset_bottom = 2138.0
alignment = 2

[node name="HealthBar" type="TextureProgressBar" parent="HBoxContainer2"]
layout_mode = 2

[node name="HealthLabel" type="Label" parent="HBoxContainer2"]
layout_mode = 2
text = "Health: 100/100"

[node name="MoveIconsBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 363.0
offset_top = -1060.0
offset_right = 1423.0
offset_bottom = -860.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.4, 0.4)
theme_override_constants/separation = 15

[node name="Action1" type="TextureProgressBar" parent="MoveIconsBar"]
layout_mode = 2
value = 100.0
fill_mode = 4
texture_under = ExtResource("1_k4ew6")
texture_progress = ExtResource("3_nul7f")

[node name="Action2" type="TextureProgressBar" parent="MoveIconsBar"]
layout_mode = 2
value = 100.0
fill_mode = 4
texture_under = ExtResource("1_k4ew6")
texture_progress = ExtResource("4_2cns7")

[node name="Action3" type="TextureProgressBar" parent="MoveIconsBar"]
layout_mode = 2
value = 100.0
fill_mode = 4
texture_under = ExtResource("1_k4ew6")
texture_progress = ExtResource("5_0ct5d")

[node name="Action4" type="TextureProgressBar" parent="MoveIconsBar"]
layout_mode = 2
value = 100.0
fill_mode = 4
texture_under = ExtResource("1_k4ew6")
texture_progress = ExtResource("6_57t0v")

[node name="Action5" type="TextureProgressBar" parent="MoveIconsBar"]
layout_mode = 2
value = 100.0
texture_under = ExtResource("1_k4ew6")
texture_progress = ExtResource("7_07fkh")
